--- a/연습/index.html
+++ b/연습/index.html
@@ -8,6 +8,7 @@
     <title>momentum</title>
 </head>
 <body>
-    <script src='app.js'></script>
+    <h1 autofocus class="hello" id="title">Grab</h1>
+    <script src='3.1.html in javascript.js'></script>
 </body>
 </html>
