--- a/연습/index2.html
+++ b/연습/index2.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <title>momentum</title>
+
+    
 </head>
 <body>
-    <h1 autofocus class="hello" id="title">Grab</h1>
 
 
-    <div class='he' id="gg">
+
+    <div class='hello' id="dd">
         <h1>grab1</h1>
         <h1>grab2</h1>
         <h1>grab3</h1>
     </div>
 
+    <script src='3.3-5.events.js'></script>
 
-    <script src='3.3.searching for elements.js'></script>
 </body>
 </html>
