--- a/연습/index3.html
+++ b/연습/index3.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="3.7.cssinjs2.css">
     <title>momentum</title>
 </head>
 <body>
-    <h1 autofocus class="hello" id="title">Grab</h1>
 
 
-    <div class='he' id="gg">
-        <h1>grab1</h1>
+
+    <div class='hello' id="dd">
+        <h1 class="bigfont">grab1</h1>
         <h1>grab2</h1>
         <h1>grab3</h1>
     </div>
 
 
-    <script src='3.3.searching for elements.js'></script>
+
+    <script src='3.8.cssinjs3.js'></script>
 </body>
 </html>
