--- a/연습/index2.html
+++ b/연습/index2.html
@@ -18,7 +18,7 @@
         <h1>grab3</h1>
     </div>
 
-    <script src='3.3-5.events.js'></script>
+    <script src='3.6.cssinjs.js'></script>
 
 </body>
 </html>
