--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Momentum App</title>
-</head>
-<body>
-    <form class="hidden" id='login-form'>
-        <input 
-        required 
+  </head>
+  <body>
+    <form class="hidden" id="login-form">
+      <input
+        required
         maxlength="15"
-        type="text" 
+        type="text"
         placeholder="What is your name?"
-        />
-        <input type="submit"value='Log In'/>
+      />
+      <input type="submit" value="Log In" />
     </form>
 
-    <div class="dd">
-        <h1 id='greeting'class="hidden"></h1>
-        <h1>1</h1>
-        <h1>2</h1>
-        <h1>3</h1>
+    <h2 id="clock"></h2>
+    <h1 class="hidden" id="greeting"></h1>
+
+    <form action="" id="todo-form">
+
+        <input type="text" placeholder="Write a To Do and Press Enter" required>
+    </form>
+
+
+
+    <div id="quote">
+      <span> </span>
+      <span> </span>
     </div>
-    <div class="dd">
-        <h1 id='greeting'class="hidden"></h1>
-        <h1>1</h1>
-        <h1>2</h1>
-        <h1>3</h1>
-    </div>
-
-
-
-    <h2 id="clock">00:00</h2>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
-</body>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    
+  </body>
 </html>
