--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
         <input type="text" placeholder="Write a To Do and Press Enter" required>
     </form>
+    <ul id="todo-list">
+
+    </ul>
 
 
 
@@ -31,11 +34,18 @@
       <span> </span>
       <span> </span>
     </div>
+    <div id="weather">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script type="module" src="js/weather.js"></script>
+    <script type="module" src="js/validation.js"></script>
     
   </body>
 </html>
