--- a/index.html
+++ b/index.html
@@ -7,28 +7,33 @@
     <title>Momentum App</title>
   </head>
   <body>
-    <form class="hidden" id="login-form">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log In" />
-    </form>
+    <div class="login hidden">
+      <h1>Hello, What's your name?</h1>
+      <form class="login-form">
+        <input
+          required
+          maxlength="15"
+          type="text"
+        />
+      </form>
+    </div>
 
     <h2 id="clock"></h2>
-    <h1 class="hidden" id="greeting"></h1>
+    <!-- <h1 class="hidden" id="greeting"></h1> 
+    뭔가 로그인할 때만 잠깐 멋있게 나왔다가 사라지기.-->
 
     <form action="" id="todo-form">
-
         <input type="text" placeholder="Write a To Do and Press Enter" required>
     </form>
+    <div id="waka">
+    <figure>
+      <embed src="https://wakatime.com/share/@5d18c21e-8710-44da-9f9e-d313524892ad/e39bf1fb-bdc6-4421-99f5-02bef6c48acf.svg"></embed>
+      <!-- 가능하다면 날짜별 색깔 다르게 하기.
+      목표설정. -->
+    </figure>
+    </div>
     <ul id="todo-list">
-
     </ul>
-
-
 
     <div id="quote">
       <span> </span>
@@ -39,13 +44,14 @@
       <span></span>
       <span></span>
     </div>
+
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script type="module" src="js/weather.js"></script>
-    <script type="module" src="js/validation.js"></script>
+    <script type="module" src="js/validation.js"></script> 
     
   </body>
 </html>
