--- a/index.html
+++ b/index.html
@@ -19,31 +19,41 @@
     </div>
 
     <h2 id="clock"></h2>
-    <!-- <h1 class="hidden" id="greeting"></h1> 
-    뭔가 로그인할 때만 잠깐 멋있게 나왔다가 사라지기.-->
-
-    <form action="" id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press Enter" required>
-    </form>
-    <div id="waka">
-    <figure>
-      <embed src="https://wakatime.com/share/@5d18c21e-8710-44da-9f9e-d313524892ad/e39bf1fb-bdc6-4421-99f5-02bef6c48acf.svg"></embed>
-      <!-- 가능하다면 날짜별 색깔 다르게 하기.
-      목표설정. -->
-    </figure>
-    </div>
-    <ul id="todo-list">
-    </ul>
-
-    <div id="quote">
-      <span> </span>
-      <span> </span>
-    </div>
     <div id="weather">
       <span></span>
       <span></span>
       <span></span>
     </div>
+    <!-- <h1 class="hidden" id="greeting"></h1> 
+    뭔가 로그인할 때만 잠깐 멋있게 나왔다가 사라지기.-->
+
+    <div id="quote">
+      <span> </span>
+      <span> </span>
+    </div>
+
+<!--Todo--------------->
+
+    <div id='todo-div'>
+
+      <form action="" id="todo-form">
+          <input type="text" placeholder="Write a To Do and Press Enter" required>
+      </form>
+
+      <ul id="todo-list">
+      </ul>
+    </div>
+
+
+
+    <!--wakatime-->
+    <!--<div id="waka">
+      <figure>
+        <embed src="https://wakatime.com/share/@5d18c21e-8710-44da-9f9e-d313524892ad/e39bf1fb-bdc6-4421-99f5-02bef6c48acf.svg"></embed>
+        <!-- 가능하다면 날짜별 색깔 다르게 하기.
+        목표설정. -->
+      </figure>
+      </div>
 
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
