221023_chrome_app_clone_edit_todo

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/edit_todo.js"></script> 
     <script type="module" src="js/weather.js"></script>
     <script type="module" src="js/validation.js"></script> 
     
