--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
       <span> </span>
     </div>
 
+    
+<!-- 구글 검색 입력 창 -->
+<form id="googlesearch" method=get action="http://www.google.co.kr/search" target="_blank" >
+    <tr>
+    <td>
+      <input id="googlesearch_text"type=text name=q size=25 maxlength=255 value="" /> 
+      <input id="googlesearch_btn"type=submit name=btnG value="&#xf002" /> 
+    </td>
+    </tr>
+
+</form>
+<img src="https://ghchart.rshah.org/ff00ff/fluorjo"/> 
+
 <!--Todo--------------->
 
     <div id='todo-div'>
@@ -63,6 +76,10 @@
     <script src="js/edit_todo.js"></script> 
     <script type="module" src="js/weather.js"></script>
     <script type="module" src="js/validation.js"></script> 
+    <script
+    src="https://kit.fontawesome.com/29233b525a.js" 
+
+crossorigin="anonymous"></script>
     
   </body>
 </html>
