--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </tr>
 
 </form>
-<img src="https://ghchart.rshah.org/ff00ff/fluorjo"/> 
+<img src="https://ghchart.rshah.org/00ffff/fluorjo"/> 
 
 <!--Todo--------------->
 
