221023_chrome_app_clone-complete_basic

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <span></span>
       <span></span>
     </div>
-    <!-- <h1 class="hidden" id="greeting"></h1> 
-    뭔가 로그인할 때만 잠깐 멋있게 나왔다가 사라지기.-->
+     <!--<h1 class="hidden" id="greeting"></h1>--> 
+    <!--뭔가 로그인할 때만 잠깐 멋있게 나왔다가 사라지기.-->
     <div id="quote">
       <span> </span>
       <span> </span>
@@ -40,9 +40,46 @@
       <input id="googlesearch_btn"type=submit name=btnG value="&#xf002" /> 
     </td>
     </tr>
-
 </form>
-<img src="https://ghchart.rshah.org/00ffff/fluorjo"/> 
+
+<!--즐겨찾기-->
+<div class="bookmarkbox">
+  <ul id="bookmark-list">
+    <li>
+      <a href="http://www.github.com">      <img src="./img/git.png" alt=""></a>
+
+    </li>
+    <li>
+      <a href="https://wakatime.com/dashboard">
+      <img id="wakaimg" src="./img/wakatime.svg" alt='' />
+      </a>
+
+    </li>
+    <li>
+      <img src='' onerror="this.src='./img/plus.png'" alt='' />
+
+    </li>
+    <li>
+      <img src='' onerror="this.src='./img/plus.png'" alt='' />
+    </li>
+    <li>
+      <img src='' onerror="this.src='./img/plus.png'" alt='' />
+    </li>
+    <li>
+      <img src='' onerror="this.src='./img/plus.png'" alt='' />
+    </li>
+    <li>
+      <img src='' onerror="this.src='./img/plus.png'" alt='' />
+    </li>
+    <li>
+      <img src='' onerror="this.src='./img/plus.png'" alt='' />
+    </li>
+  </ul>
+
+ 
+</div>
+
+
 
 <!--Todo--------------->
 
@@ -58,6 +95,7 @@
 
 
 
+<!-- <img src="https://ghchart.rshah.org/00ffff/fluorjo"/>  -->
 
     <!--wakatime-->
     <!--<div id="waka">
@@ -74,6 +112,7 @@
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/edit_todo.js"></script> 
+    <script src="js/bookmark.js"></script> 
     <script type="module" src="js/weather.js"></script>
     <script type="module" src="js/validation.js"></script> 
     <script
